# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: general.yaml
.sqlx/: query-2bcfb048ec57fbd6463e54bb2448f2a33609991be3cc7a525866315b5e733a92.json  query-2dbe7e32d91be042d2647e9746571fede234247561a7df8f0586e8fc374b1286.json  query-3ac1bd4a3fe70a6c2f5df8acd73b961dfb5fedee5e38c87d5907abd7cd065283.json  query-3f27fd8d1d70403e0cafb758988c88ec2669286c523f1bea10bbd8173d90b746.json  query-4ae4d587d3e80537080585c72995b24407cbab5b11ca6cd52871c51a04da1f4d.json  query-7de799c4879c334e7b86e7c874ce882e8dd6253ba9f65bc2bc6b50724b67ffbc.json  query-92629fb99d60404c692afb9d1b7c1bad154db6d0f87ca27e059514b993f116df.json  query-d26d247bb8b3ddeb944e1465bd87830e67bea1948009317195ab30642497cc45.json  query-d583071ec66170c3211c6a3dbebc1fabd08f6354f9f9c96295621e36536b724f.json
configuration/: base.yaml  configuration.yaml  local.yaml  production.yaml
migrations/: 20250615060129_create_subscriptions_table.sql  20250623082606_add_status_to_subscriptions.sql  20250623083114_make_status_not_null_in_subscriptions.sql  20250623083540_create_subscriptions_tokens_table.sql  20250626103438_create_users_table.sql  20250701114454_seed_user.sql  20250707123253_create_idempotency_table.sql  20250708072734_create_newslette_issues_table.sql  20250708073357_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  session_state.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
