[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dependencies]
axum = {version = "0.8.4", features= ["tokio", "form", "macros", "tracing"]}
chrono = "0.4.41"
config = {version = "0.15.11", features = ["yaml"]}
serde = {version ="1.0.219", features= ["derive"]}
tokio = {version = "1.45.1", features = ["rt-multi-thread"]}
tower-http = {version = "0.6.6", features = ["trace", "follow-redirect"]}
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "registry"]}
uuid = {version = "1.17.0", features = ["v4"]}

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "macros",
  "postgres",
  "uuid",
  "chrono", 
  "migrate",
  "runtime-tokio-rustls"
]

[dev-dependencies]
reqwest = "0.12.20"
once_cell = "1.21.3"

