[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.98"
argon2 = {version = "0.5.3", features = ["std"]}
axum = {version = "0.8.4", features= ["tokio", "form", "macros", "tracing", "json"]}
axum-extra = {version = "0.10.1", features = ["cookie"]}
axum-login = "0.17.0"
axum-messages = "0.8.0"
chrono = "0.4.41"
config = {version = "0.15.11", features = ["yaml"]}
rand = {version ="0.9.1", features= ["std_rng"]}
reqwest = {version = "0.12.22", features = ["json", "rustls-tls", "cookies"]}
secrecy = {version= "0.10.3", features = ["serde"]}
serde = {version ="1.0.219", features= ["derive"]}
serde-aux = "4.7.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.41"
tokio = {version = "1.46.0", features = ["rt-multi-thread", "signal"]}
tower-http = {version = "0.6.6", features = ["trace", "follow-redirect", "request-id"]}
tower-sessions-redis-store = {version = "0.16.0", features = ["enable-rustls"]}
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "registry"]}
unicode-segmentation = "1.12.0"
uuid = {version = "1.17.0", features = ["v4", "serde"]}
validator = "0.20.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "macros",
  "postgres",
  "uuid",
  "chrono", 
  "migrate",
  "runtime-tokio-rustls"
]

[dev-dependencies]
claim = "0.5.0"
once_cell = "1.21.3"
fake = "4.3.0"
linkify = "0.10.0"
serde_json = "1.0.140"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.4"
